--- a/end-to-end-bulldozer-price-regression.ipynb
+++ b/end-to-end-bulldozer-price-regression.ipynb
@@ -244,7 +244,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2e756fb79d0>"
+       "<matplotlib.collections.PathCollection at 0x17a42955fa0>"
       ]
      },
      "execution_count": 8,
@@ -1856,8 +1856,8 @@
        "Oregon             1911\n",
        "Michigan           1831\n",
        "Wyoming            1672\n",
-       "Iowa               1336\n",
        "Montana            1336\n",
+       "Iowa               1336\n",
        "Oklahoma           1326\n",
        "Nebraska            866\n",
        "West Virginia       840\n",
@@ -2890,7 +2890,7 @@
     {
      "data": {
       "text/plain": [
-       "<generator object DataFrame.items at 0x000002E757215040>"
+       "<generator object DataFrame.items at 0x0000017A0009CDD0>"
       ]
      },
      "execution_count": 25,
@@ -4125,7 +4125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -4156,7 +4156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -4179,7 +4179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4194,7 +4194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4206,7 +4206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -4592,7 +4592,7 @@
        "[412698 rows x 59 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4603,7 +4603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -4614,7 +4614,7 @@
        "Name: MachineHoursCurrentMeter_is_missing, dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4625,7 +4625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -4693,7 +4693,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4711,7 +4711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -4774,7 +4774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4790,7 +4790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -4799,7 +4799,7 @@
        "array([43,  8,  8, ...,  4,  4,  4], dtype=int8)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4810,7 +4810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -4827,6 +4827,304 @@
    ],
    "source": [
     "df_tmp.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that all of our data is numeric as well as our dataframe has no missing value, we can build a machine learning model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SalesID</th>\n",
+       "      <th>SalePrice</th>\n",
+       "      <th>MachineID</th>\n",
+       "      <th>ModelID</th>\n",
+       "      <th>datasource</th>\n",
+       "      <th>auctioneerID</th>\n",
+       "      <th>YearMade</th>\n",
+       "      <th>MachineHoursCurrentMeter</th>\n",
+       "      <th>UsageBand</th>\n",
+       "      <th>fiModelDesc</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Undercarriage_Pad_Width_is_missing</th>\n",
+       "      <th>Stick_Length_is_missing</th>\n",
+       "      <th>Thumb_is_missing</th>\n",
+       "      <th>Pattern_Changer_is_missing</th>\n",
+       "      <th>Grouser_Type_is_missing</th>\n",
+       "      <th>Backhoe_Mounting_is_missing</th>\n",
+       "      <th>Blade_Type_is_missing</th>\n",
+       "      <th>Travel_Controls_is_missing</th>\n",
+       "      <th>Differential_Type_is_missing</th>\n",
+       "      <th>Steering_Controls_is_missing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1646770</td>\n",
+       "      <td>9500.0</td>\n",
+       "      <td>1126363</td>\n",
+       "      <td>8434</td>\n",
+       "      <td>132</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4593</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1821514</td>\n",
+       "      <td>14000.0</td>\n",
+       "      <td>1194089</td>\n",
+       "      <td>10150</td>\n",
+       "      <td>132</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1820</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1505138</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>1473654</td>\n",
+       "      <td>4139</td>\n",
+       "      <td>132</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>1978</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2348</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1671174</td>\n",
+       "      <td>16000.0</td>\n",
+       "      <td>1327630</td>\n",
+       "      <td>8591</td>\n",
+       "      <td>132</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1819</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1329056</td>\n",
+       "      <td>22000.0</td>\n",
+       "      <td>1336053</td>\n",
+       "      <td>4089</td>\n",
+       "      <td>132</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2119</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 103 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   SalesID  SalePrice  MachineID  ModelID  datasource  auctioneerID  YearMade  \\\n",
+       "0  1646770     9500.0    1126363     8434         132          18.0      1974   \n",
+       "1  1821514    14000.0    1194089    10150         132          99.0      1980   \n",
+       "2  1505138    50000.0    1473654     4139         132          99.0      1978   \n",
+       "3  1671174    16000.0    1327630     8591         132          99.0      1980   \n",
+       "4  1329056    22000.0    1336053     4089         132          99.0      1984   \n",
+       "\n",
+       "   MachineHoursCurrentMeter  UsageBand  fiModelDesc  ...  \\\n",
+       "0                       0.0          0         4593  ...   \n",
+       "1                       0.0          0         1820  ...   \n",
+       "2                       0.0          0         2348  ...   \n",
+       "3                       0.0          0         1819  ...   \n",
+       "4                       0.0          0         2119  ...   \n",
+       "\n",
+       "   Undercarriage_Pad_Width_is_missing  Stick_Length_is_missing  \\\n",
+       "0                                True                     True   \n",
+       "1                                True                     True   \n",
+       "2                                True                     True   \n",
+       "3                                True                     True   \n",
+       "4                                True                     True   \n",
+       "\n",
+       "   Thumb_is_missing  Pattern_Changer_is_missing  Grouser_Type_is_missing  \\\n",
+       "0              True                        True                     True   \n",
+       "1              True                        True                     True   \n",
+       "2              True                        True                     True   \n",
+       "3              True                        True                     True   \n",
+       "4              True                        True                     True   \n",
+       "\n",
+       "   Backhoe_Mounting_is_missing  Blade_Type_is_missing  \\\n",
+       "0                        False                  False   \n",
+       "1                         True                   True   \n",
+       "2                        False                  False   \n",
+       "3                         True                   True   \n",
+       "4                        False                  False   \n",
+       "\n",
+       "   Travel_Controls_is_missing  Differential_Type_is_missing  \\\n",
+       "0                       False                          True   \n",
+       "1                        True                         False   \n",
+       "2                       False                          True   \n",
+       "3                        True                         False   \n",
+       "4                       False                          True   \n",
+       "\n",
+       "   Steering_Controls_is_missing  \n",
+       "0                          True  \n",
+       "1                         False  \n",
+       "2                          True  \n",
+       "3                         False  \n",
+       "4                          True  \n",
+       "\n",
+       "[5 rows x 103 columns]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_tmp.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 15min 50s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(n_jobs=1, random_state=42)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "#Instantiate model \n",
+    "model= RandomForestRegressor(n_jobs=1,\n",
+    "                            random_state=42)\n",
+    "\n",
+    "#Fit the model\n",
+    "\n",
+    "model.fit(df_tmp.drop(\"SalePrice\", axis=1),df_tmp['SalePrice'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9875468079970562"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.score(df_tmp.drop(\"SalePrice\", axis=1),df_tmp['SalePrice'])"
    ]
   },
   {
